# cng-sandbox

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  README.md  SECURITY.md  docker-compose.yml  release-please-config.json  wrangler.toml
geo-conversions/: README.md  __init__.py  cli.py  pyproject.toml
geo-conversions/csv-to-geoparquet/: SKILL.md  __init__.py  conftest.py
geo-conversions/csv-to-geoparquet/scripts/: validate.py
geo-conversions/geojson-to-geoparquet/: SKILL.md  __init__.py
geo-conversions/geojson-to-geoparquet/scripts/: convert.py  validate.py
geo-conversions/geojson-to-geoparquet/tests/: test_progress_callback.py
geo-conversions/geotiff-to-cog/: SKILL.md  __init__.py
geo-conversions/geotiff-to-cog/scripts/: convert.py  validate.py
geo-conversions/hdf5-to-cog/: __init__.py
geo-conversions/hdf5-to-cog/scripts/: convert.py  test_convert.py  validate.py
geo-conversions/hdf5-to-cog/tests/: test_time_index.py
geo-conversions/las-to-copc/: SKILL.md  __init__.py
geo-conversions/las-to-copc/scripts/: validate.py
geo-conversions/las-to-copc/tests/: test_validate.py
geo-conversions/netcdf-to-cog/: SKILL.md  __init__.py
geo-conversions/netcdf-to-cog/scripts/: convert.py  validate.py
geo-conversions/shapefile-to-geoparquet/: SKILL.md  __init__.py
geo-conversions/shapefile-to-geoparquet/scripts/: convert.py  validate.py
geo-conversions/shapefile-to-geoparquet/tests/: test_progress_callback.py
geo-conversions/shared/: __init__.py
geo-conversions/shared/scripts/: reproject.py
geo-conversions/shared/tests/: test_reproject.py
ingestion/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
ingestion/migrations/: 004_nullable_dataset_id.sql  005_add_workspace_id.sql  006_add_is_shared.sql  007_add_render_mode.sql  008_add_preferred_colormap.sql  009_add_connection_config.sql  010_add_geozarr_attrs.sql  011_add_forked_from_id.sql
ingestion/scripts/: make_tiny_parquet.py
ingestion/src/: app.py  config.py  dependencies.py  models.py  rate_limit.py  state.py  workspace.py
ingestion/src/middleware/: rate_limit.py
ingestion/src/models/: __init__.py  cng_rc.py  connection.py  dataset.py  expiry.py  story.py  story_asset.py  workspace_example_state.py
ingestion/src/routes/: bug_report.py  catalog.py  chat.py  connect_remote.py  connect_source_coop.py  connections.py  dataset_charts.py  datasets.py  inspect.py  jobs.py  proxy.py  stories.py  story_assets.py  upload.py  validation.py  workspace_examples.py  zarr_proxy.py
ingestion/src/services/: catalog_providers.py  categorical.py  categorical_extract.py  chat_context.py  chat_relay.py  cleanup.py  cog_checker.py  colormap.py  dataset_delete.py  detector.py  discovery.py  duplicate_check.py  error_mapping.py  example_connections.py  example_datasets.py  example_stories.py  example_trajectory_source.py  example_workspace.py  format_checker.py  geoparquet_to_pmtiles.py  geozarr_attrs.py  image_processing.py  pipeline.py  pmtiles_header.py  pmtiles_ingest.py  pmtiles_register.py  pointcloud_geo.py  pointcloud_pipeline.py  remote_pipeline.py  remote_register.py  render_mode.py  scanner.py  sharing.py  source_coop_config.py  stac_ingest.py  storage.py  story_export.py  story_utils.py  temporal_ordering.py  temporal_pipeline.py  (+4 more)
ingestion/src/services/enumerators/: __init__.py  maxar.py  path_listing.py  single_cog.py  stac_sidecars.py
ingestion/src/services/interactive_export/: asset_inline.py  builder.py  chart_data.py  chart_export.py  endpoint.py  html_shell.py  raster_pyramid.py  runtime_assets.py  source_resolver.py  vector_arrow.py
ingestion/tests/: conftest.py  test_antakya_story_seed.py  test_bounds.py  test_bug_report.py  test_catalog.py  test_categorical.py  test_categorical_extract.py  test_chat_config.py  test_chat_context.py  test_chat_relay.py  test_check_format.py  test_cleanup.py  test_cng_rc_schema.py  test_cog_checker.py  test_colormap_service.py  test_connect_source_coop.py  test_connection_geozarr_attrs.py  test_connection_sharing.py  test_connections.py  test_connections_colormap_route.py  test_connections_copc.py  test_connections_geozarr_attrs.py  test_connections_render_mode_route.py  test_connections_zarr.py  test_convert_url.py  test_csv_upload.py  test_dataset_charts.py  test_dataset_patch.py  test_dataset_sharing.py  test_datasets.py  test_datasets_colormap_route.py  test_datasets_render_mode_route.py  test_detector.py  test_discovery.py  test_duplicate_check.py  test_duplicate_upload.py  test_error_mapping.py  test_example_copy_columns.py  test_example_datasets_colormap_seeding.py  test_example_trajectories_seeding.py  (+65 more)
ingestion/tests/fixtures/: tiny.laz  tiny.parquet  tiny_nocrs.laz  two_track.gpx
ingestion/tests/fixtures/maxar/: collection.json  item-a.json  item-b.json
ingestion/tests/services/: test_example_connections.py  test_example_datasets.py  test_example_stories.py  test_example_workspace.py  test_geozarr_attrs.py  test_image_processing.py  test_pmtiles_header.py  test_pmtiles_register.py  test_remote_register.py  test_source_coop_config.py  test_trajectory_pipeline.py
ingestion/tests/services/enumerators/: test_interface.py  test_path_listing.py  test_stac_sidecars.py  test_stac_sidecars_recursive.py
ingestion/tests/services/interactive_export/: test_asset_inline.py  test_builder.py  test_chart_data.py  test_chart_export.py  test_raster_pyramid.py  test_runtime_assets.py  test_source_resolver.py  test_vector_arrow.py
mcp/: ARCHITECTURE.md  CONTRIBUTING.md  README.md  pyproject.toml
mcp/src/cng_mcp/: __init__.py  server.py
mcp/src/cng_mcp/client/: __init__.py  (+1 more)
mcp/tests/: __init__.py  conftest.py  test_client_sandbox_api.py  test_e2e.py  test_resources_colormaps.py  test_resources_datasets.py  test_resources_stories.py  test_server_integration.py  test_tools_connections.py  test_tools_datasets.py  test_tools_export.py  test_tools_ingest.py  test_tools_jobs.py  test_tools_remote.py  test_tools_stories.py  test_tools_story_assets.py  test_tools_validation.py
(+718 files in other folders)
