[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cng-toolkit"
version = "0.1.0"
description = "Geospatial file conversion and validation toolkit"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
raster = ["rasterio", "rio-cogeo", "numpy", "pyproj"]
vector = ["geopandas", "pyarrow", "shapely"]
netcdf = ["xarray", "netcdf4", "rasterio", "rio-cogeo", "numpy"]
hdf5 = ["h5py", "rasterio", "rio-cogeo", "numpy"]
all = ["rasterio", "rio-cogeo", "numpy", "pyproj", "geopandas", "pyarrow", "shapely", "xarray", "netcdf4", "h5py"]

[project.scripts]
cng = "cli:main"

[tool.setuptools]
py-modules = ["cli"]
packages = [
    "geotiff_to_cog",
    "shapefile_to_geoparquet",
    "geojson_to_geoparquet",
    "netcdf_to_cog",
    "hdf5_to_cog",
    "cng_shared",
]

[tool.setuptools.package-dir]
geotiff_to_cog = "geotiff-to-cog"
shapefile_to_geoparquet = "shapefile-to-geoparquet"
geojson_to_geoparquet = "geojson-to-geoparquet"
netcdf_to_cog = "netcdf-to-cog"
hdf5_to_cog = "hdf5-to-cog"
cng_shared = "shared"

[tool.setuptools.package-data]
geotiff_to_cog = ["scripts/*.py"]
shapefile_to_geoparquet = ["scripts/*.py"]
geojson_to_geoparquet = ["scripts/*.py"]
netcdf_to_cog = ["scripts/*.py"]
hdf5_to_cog = ["scripts/*.py"]
cng_shared = ["scripts/*.py"]
