[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cng-toolkit"
version = "0.1.0"
description = "Geospatial file conversion and validation toolkit"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
raster = ["rasterio", "rio-cogeo", "numpy", "pyproj"]
vector = ["geopandas", "pyarrow", "shapely"]
netcdf = ["xarray", "netcdf4", "rasterio", "rio-cogeo", "numpy", "pyproj"]
hdf5 = ["h5py", "rasterio", "rio-cogeo", "numpy"]
pointcloud = ["laspy[lazrs]>=2.5.0", "pyproj"]
all = ["rasterio", "rio-cogeo", "numpy", "pyproj", "geopandas", "pyarrow", "shapely", "xarray", "netcdf4", "h5py", "laspy[lazrs]>=2.5.0"]

[project.scripts]
cng = "cli:main"

[tool.setuptools]
py-modules = ["cli"]
packages = [
    "geotiff_to_cog",
    "shapefile_to_geoparquet",
    "geojson_to_geoparquet",
    "netcdf_to_cog",
    "hdf5_to_cog",
    "las_to_copc",
    "cng_shared",
]

[tool.setuptools.package-dir]
geotiff_to_cog = "geotiff-to-cog"
shapefile_to_geoparquet = "shapefile-to-geoparquet"
geojson_to_geoparquet = "geojson-to-geoparquet"
netcdf_to_cog = "netcdf-to-cog"
hdf5_to_cog = "hdf5-to-cog"
las_to_copc = "las-to-copc"
cng_shared = "shared"

[tool.setuptools.package-data]
geotiff_to_cog = ["scripts/*.py"]
shapefile_to_geoparquet = ["scripts/*.py"]
geojson_to_geoparquet = ["scripts/*.py"]
netcdf_to_cog = ["scripts/*.py"]
hdf5_to_cog = ["scripts/*.py"]
las_to_copc = ["scripts/*.py"]
cng_shared = ["scripts/*.py"]
