[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "cng-sandbox-ingestion"
version = "0.1.0"
description = "CNG Sandbox ingestion service"
requires-python = ">=3.12"
# NOTE: Also requires cng-toolkit[all] installed from skills/geo-conversions/.
# Install separately: pip install -e ../../skills/geo-conversions[all]
# (setuptools doesn't support relative path deps in pyproject.toml)
dependencies = [
    "fastapi>=0.137.1",
    "uvicorn[standard]>=0.49.0",
    "python-multipart>=0.0.32",
    "sse-starlette>=3.4.4",
    "obstore>=0.10.1",
    "python-magic>=0.4.27",
    "httpx>=0.27.0",
    "pydantic-settings>=2.14.1",
    "geopandas>=1.0.0",
    "sqlalchemy>=2.0.51",
    "geoalchemy2>=0.20.0",
    "psycopg2-binary>=2.9.0",
    "rio-stac>=0.10.0",
    "pystac[validation]>=1.14.3",
    "geojson-pydantic>=2.1.1",
    "h5py>=3.10.0",
    "beautifulsoup4>=4.15.0",
    "pyarrow>=17.0.0",
    "slowapi>=0.1.10",
    "pillow>=12.2.0",
    "pandas>=3.0.3",
    "zstandard>=0.23.0",
    "rio-tiler>=9.2.1",
    "pmtiles>=3.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.1.0", "pytest-asyncio>=1.4.0", "ruff==0.15.17"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modern Python idioms)
    "B",   # flake8-bugbear (common bugs)
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long — handled by ruff format
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff==0.15.17",
]
