[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cng-mcp"
version = "0.1.0"
description = "MCP Server for CNG Sandbox: agent-driven story creation and data exploration"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Development Seed"}]
keywords = ["mcp", "geospatial", "agent", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=0.1.0",
    "httpx>=0.24.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.0",
    "pytest-cov>=4.0",
]

[project.scripts]
cng-mcp = "cng_mcp.server:main_cli"

[tool.hatch.build.targets.wheel]
packages = ["src/cng_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
